# renamer

./: README.rst  pyproject.toml
.github/workflows/: python-package.yml
renamer/: __init__.py  __main__.py  operator.py  rename.py  search.py
tests/: test_rename.py  test_search.py
