[tool.poetry]
name = "renamer"
version = "1.0.0"
description = "Rename files to countable number."
authors = ["sourjp <hiro0209.ki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
